updated some html and added flip cards to contact page

--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -1,1 +1,102 @@
-For more information email Paul Darragh at pmd6624
+<body>
+  <ul class="flipping-cards">
+    <li>
+      <input type="checkbox" id="item1">
+      <label for="item1">
+        <span class="wrapper">
+          <span class="front">
+            <img style="width: auto; height: 150px" src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xfp1/v/t1.0-9/10527436_765708940160367_868482666836333875_n.jpg?oh=626d8fcde7717f055b314d01e16d6127&oe=5490CD94&__gda__=1419629839_3c27382bbaeab106459f91af29081b33">
+            <h2>President:</h2>
+            <h3> Madison Doolittle</h3>
+          </span>
+          <span class="back">
+            <h2>Email:</h2>
+            <h3>something@somethin.com</h3>
+          </span>
+        </span>
+      </label>
+    </li>
+    <li>
+      <input type="checkbox" id="item2">
+      <label for="item2">
+        <span class="wrapper">
+          <span class="front">
+            <img style="width: auto; height: 150px" src="https://scontent-b-iad.xx.fbcdn.net/hphotos-frc3/v/t1.0-9/1239982_10151844084282342_717585795_n.jpg?oh=d085ad9886c1ed6a4b6159e33af2c97a&oe=54A046B3">
+            <h2>First VP:</h2>
+            <h3>Kent Derbyshire</h3>
+          </span>
+          <span class="back">
+            <h2>Email:</h2>
+            <h3>something@somethin.com</h3>
+          </span>
+        </span>
+      </label>
+    </li>
+    <li>
+      <input type="checkbox" id="item3">
+      <label for="item3">
+        <span class="wrapper">
+          <span class="front">
+            <img style="width: auto; height: 150px" src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/62942_1619728219040_1715437_n.jpg?oh=923ebb0efcd4cac7df0542b9411fab2d&oe=5484C600&__gda__=1418750015_a0f9fdb99366cde2a083436b6e23da59">
+            <h2>Second VP:</h2>
+            <h3>Paul Bianco</h3>
+          </span>
+          <span class="back">
+            <h2>Email:</h2>
+            <h3>something@somethin.com</h3>
+          </span>
+        </span>
+      </label>
+    </li>
+    <li>
+      <input type="checkbox" id="item4">
+      <label for="item4">
+        <span class="wrapper">
+          <span class="front">
+            <img style="width: auto; height: 150px" src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/10599174_10152732895667323_6611975691201704850_n.jpg?oh=a9d9dc4b61563ef40d9fe2e5cad243f6&oe=5490FC67&__gda__=1418023192_b5a76e1189289a74e86cddb2033ca916">
+            <h2>Treasure:</h2>
+            <h3>Peter Webster</h3>
+          </span>
+          <span class="back">
+            <h2>Email:</h2>
+            <h3>something@somethin.com</h3>
+          </span>
+        </span>
+      </label>
+    </li>
+    <li>
+      <input type="checkbox" id="item5">
+      <label for="item5">
+        <span class="wrapper">
+          <span class="front">
+            <img style="width: auto; height: 150px" src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/1374800_748919315123194_1634089085_n.jpg?oh=415f4818010f567a7b917af9efe11f0a&oe=54955552&__gda__=1418206849_f59b7003c125f138a962da329493ff19">
+            <h2>Chaplain:</h2>
+            <h3>Kyle Grant</h3>
+          </span>
+          <span class="back">
+            <h2>Email:</h2>
+            <h3>something@somethin.com</h3>
+          </span>
+        </span>
+      </label>
+    </li>
+    <li>
+      <input type="checkbox" id="item6">
+      <label for="item6">
+        <span class="wrapper">
+          <span class="front">
+            <img style="width: auto; height: 150px" src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/63383_10202668989302576_1442452285_n.jpg?oh=920da77b6d926156a9526e0a95fc24c5&oe=5483862E&__gda__=1419211210_d95f6da5f2dcdc9a6d0a4083106b16d4">
+            <h2>Sargent:</h2>
+            <h3>Hayden Burger</h3>
+          </span>
+          <span class="back">
+            <h2>Email:</h2>
+            <h3>something@somethin.com</h3>
+          </span>
+        </span>
+      </label>
+    </li>
+  </ul>
+  <div style="float: none; clear:both;"> </div>
+</body>
+    
