--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,15 +1,27 @@
-Mission
+<div class="card">
+<h2>Our Mission</h2>
 
-The mission of Phi Kappa Tau is to champion a lifelong commitment to brotherhood, learning, ethical leadership and exemplary character.
+<p>The mission of Phi Kappa Tau is to champion a lifelong commitment to brotherhood, learning, ethical leadership and
+   exemplary character.</p>
 
-Vision
+<h2>Our Vision</h2>
 
-The vision of Phi Kappa Tau is to be recognized as a leadership organization that binds men together and challenges them to improve their campuses and the world.
+<p>The vision of Phi Kappa Tau is to be recognized as a leadership organization that binds men together and challenges
+   them to improve their campuses and the world.</p>
 
-Creed
+<h2>Our Creed</h2>
 
-Phi Kappa Tau, by admitting me to membership, has conferred upon me a mark of distinction in which I take just pride. I believe in the spirit of brotherhood for which it stands. I shall strive to attain its ideals, and by so doing to bring to it honor and credit. I shall be loyal to my college and my chapter and shall keep strong my ties to them that I may ever retain the spirit of youth. I shall be a good and loyal citizen. I shall try always to discharge the obligation to others which arises from the fact that I am a fraternity man.
+<p>Phi Kappa Tau,</p>
+<p>by admitting me to membership, has conferred upon me a mark of distinction in which I take just pride.</p>
+<p>I believe in the spirit of brotherhood for which it stands.</p>
+<p>I shall strive to attain its ideals, and by so doing to bring to it honor and credit.</p>
+<p>I shall be loyal to my college and my chapter and shall keep strong my ties to them that I may ever retain the
+    spirit of youth.
+</p><p>I shall be a good and loyal citizen.</p>
+<p>I shall try always to discharge the obligation to others which arises from the fact that I am a fraternity man.</p>
 
-Roland Maxwell, Southern California 1922
+<br>
+<p>Roland Maxwell, Southern California 1922</p>
 
-November 19, 1950
+<p>November 19, 1950</p>
+</div>
