--- a/app/views/static_pages/parents_fund.html
+++ b/app/views/static_pages/parents_fund.html
@@ -1,3 +1,4 @@
+<div class="card">
 The vision of the Phi Kappa Tau Foundation is to secure the necessary resources to develop and support men who:
 
 Demonstrate unwavering character
@@ -15,3 +16,4 @@ Online using a credit card
 Calling and giving your credit card information — 1-800-PKT-1906 x224
 Mailing a check to the Foundation—Angie Van Winkle, Phi Kappa Tau Foundation, 5221 Morning Sun Road, Oxford, OH 45056
 The Internal Revenue Service recognizes the Phi Kappa Tau Foundation as a 501c(3) charitable organization and gifts are tax-deductible to the extent the law allows.
+</div>
