added more cards to static pages

--- a/app/views/static_pages/local_fast_facts.html.erb
+++ b/app/views/static_pages/local_fast_facts.html.erb
@@ -1,3 +1,4 @@
+<div class="card">
 RIT Awards
 
 1968 – Greek Football Trophy – 6-0-1
@@ -51,3 +52,5 @@ Dominick and Anthony Perritano
 Jobeth and John Bowers
 Steve Nims and Rob Sauda
 Emmett and Jackson Coakley
+
+</div>
