--- a/app/views/static_pages/local_history.html.erb
+++ b/app/views/static_pages/local_history.html.erb
@@ -1,3 +1,4 @@
+<div class="card">
 Kappa Phi Omega was born on November 19, 1962, to increase the Greek opportunities for men at Rochester Institute of Technology. It was founded by a dedicated group of freshman Business Majors intent on offering the benefits of fraternal life to young men on campus. Rejecting the negative hazing practices so prevalent at the time, they pursued a positive approach to camaraderie and fellowship. The Founding fathers of Kappa Phi Omega are:
 
 Bob Mitchell
@@ -16,3 +17,4 @@ When the RIT campus moved from downtown Rochester to its suburban campus in 1968
 In 2001 RIT opened six new free-standing mansions where Gamma Nu was relocated to and where it remains today.
 
 *Howard Beck didn't sign the Gamma Nu Charter as he choose not to be initiated into Phi Kappa Tau
+</div>
