--- a/app/views/static_pages/national_fast_facts.html.erb
+++ b/app/views/static_pages/national_fast_facts.html.erb
@@ -1,4 +1,5 @@
-National Headquarters:
+<div class="card">
+  National Headquarters:
 5221 Morning Sun Road, Oxford, Ohio 45056
 (800) PKT-1906 or (513) 523-4193
 
@@ -23,3 +24,4 @@ The Laurel
 National Philanthropy:
 
 Serious Fun Network (formerly the Hole in the Wall Camps)
+    </div>
