--- a/app/views/static_pages/volunteer_opportunities.html.erb
+++ b/app/views/static_pages/volunteer_opportunities.html.erb
@@ -1,3 +1,4 @@
+<div class="card">
 It takes a team effort to focus on the mission of Phi Kappa Tau, and parents are invited to become actively involved in the Phi Tau family as Fraternity volunteers.
 
 Board of Governors
@@ -11,3 +12,4 @@ The House Corporation is the entity that manages and oversees all aspects (maint
 Parent Clubs
 
 Join other parents in support of Phi Kappa Tau undergraduate members. Help create fundraising, philanthropic, and community service events.
+</div>
