--- a/app/views/static_pages/national_history.html.erb
+++ b/app/views/static_pages/national_history.html.erb
@@ -1,4 +1,5 @@
-Phi Kappa Tau was founded on March 17, 1906, in the Union Literary Society Hall of Miami University's Old Main Building in Oxford, Ohio. The four honored founders are:
+<div class="card">
+  Phi Kappa Tau was founded on March 17, 1906, in the Union Literary Society Hall of Miami University's Old Main Building in Oxford, Ohio. The four honored founders are:
 
 Taylor Albert Borradaile
 Clinton Dewitt Boyd
@@ -9,3 +10,4 @@ There were 21 men who attended the first meeting and they hoped to establish the
 Three years later, on March 6, 1909, the organization changed its name to Phrenocon, combining the proposed names, Friends, Non-Fraternity, and Comrades. Phrenocon expanded in 1911 when a second chapter formed at Ohio University. Additional chapters were established at Ohio State University, Centre College, Mount Union College and the University of Illinois.
 /
 On March 9, 1916, the Miami chapter withdrew from the National Phrenocon in order to become a Greek-letter fraternity. They adopted the name Phi Kappa Tau, and the remaining five Phrenocon chapters agreed to the name change in December of that year. The Miami chapter was then invited to return to the national organization as the Alpha chapter of Phi Kappa Tau.
+</div>
