--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -5,13 +5,17 @@
       <label for="item1">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 150px" src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xfp1/v/t1.0-9/10527436_765708940160367_868482666836333875_n.jpg?oh=626d8fcde7717f055b314d01e16d6127&oe=5490CD94&__gda__=1419629839_3c27382bbaeab106459f91af29081b33">
+            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/DMKgTjL.jpg">
             <h2>President:</h2>
             <h3> Madison Doolittle</h3>
           </span>
           <span class="back">
             <h2>Email:</h2>
-            <h3>something@somethin.com</h3>
+            <h3>mld5448@rit.edu</h3>
+            <h2>Major:</h2>
+            <h3>Biomedical Sciences</h3>
+            <h2>Home Town:</h2>
+            <h3>Pittsford, NY</h3>
           </span>
         </span>
       </label>
@@ -21,13 +25,17 @@
       <label for="item2">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 150px" src="https://scontent-b-iad.xx.fbcdn.net/hphotos-frc3/v/t1.0-9/1239982_10151844084282342_717585795_n.jpg?oh=d085ad9886c1ed6a4b6159e33af2c97a&oe=54A046B3">
+            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/fsUNgMW.jpg">
             <h2>First VP:</h2>
             <h3>Kent Derbyshire</h3>
           </span>
           <span class="back">
             <h2>Email:</h2>
-            <h3>something@somethin.com</h3>
+            <h3>kld4491@rit.edu</h3>
+            <h2>Major:</h2>
+            <h3>Mechanical Engineering</h3>
+            <h2>Home Town:</h2>
+            <h3>Watertown, NY</h3>
           </span>
         </span>
       </label>
@@ -37,13 +45,17 @@
       <label for="item3">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 150px" src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/62942_1619728219040_1715437_n.jpg?oh=923ebb0efcd4cac7df0542b9411fab2d&oe=5484C600&__gda__=1418750015_a0f9fdb99366cde2a083436b6e23da59">
+            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/b9UMSnB.jpg">
             <h2>Second VP:</h2>
             <h3>Paul Bianco</h3>
           </span>
           <span class="back">
             <h2>Email:</h2>
-            <h3>something@somethin.com</h3>
+            <h3>pxb9965@g.rit.edu</h3>
+            <h2>Major:</h2>
+            <h3>Biomedical Sciences</h3>
+            <h2>Home Town:</h2>
+            <h3>Pittsford, NY</h3>
           </span>
         </span>
       </label>
@@ -53,13 +65,17 @@
       <label for="item4">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 150px" src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/10599174_10152732895667323_6611975691201704850_n.jpg?oh=a9d9dc4b61563ef40d9fe2e5cad243f6&oe=5490FC67&__gda__=1418023192_b5a76e1189289a74e86cddb2033ca916">
+            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
             <h2>Treasure:</h2>
             <h3>Peter Webster</h3>
           </span>
           <span class="back">
             <h2>Email:</h2>
-            <h3>something@somethin.com</h3>
+            <h3>pcw3752@rit.edu</h3>
+            <h2>Major:</h2>
+            <h3>Mechanical Engineering</h3>
+            <h2>Home Town:</h2>
+            <h3>Cazenovia, NY</h3>
           </span>
         </span>
       </label>
@@ -69,13 +85,17 @@
       <label for="item5">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 150px" src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/1374800_748919315123194_1634089085_n.jpg?oh=415f4818010f567a7b917af9efe11f0a&oe=54955552&__gda__=1418206849_f59b7003c125f138a962da329493ff19">
+            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Xzx4dci.jpg">
             <h2>Chaplain:</h2>
             <h3>Kyle Grant</h3>
           </span>
           <span class="back">
             <h2>Email:</h2>
-            <h3>something@somethin.com</h3>
+            <h3>kpg1737@rit.edu</h3>
+            <h2>Major:</h2>
+            <h3>Marketing</h3>
+            <h2>Home Town:</h2>
+            <h3>Croton-on-Hudson, NY</h3>
           </span>
         </span>
       </label>
@@ -85,13 +105,17 @@
       <label for="item6">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 150px" src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/63383_10202668989302576_1442452285_n.jpg?oh=920da77b6d926156a9526e0a95fc24c5&oe=5483862E&__gda__=1419211210_d95f6da5f2dcdc9a6d0a4083106b16d4">
+            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
             <h2>Sargent:</h2>
             <h3>Hayden Burger</h3>
           </span>
           <span class="back">
             <h2>Email:</h2>
-            <h3>something@somethin.com</h3>
+            <h3>heb3544@rit.edu</h3>
+            <h2>Major:</h2>
+            <h3>Mechanical Engineering</h3>
+            <h2>Home Town:</h2>
+            <h3>Mayflower, AK</h3>
           </span>
         </span>
       </label>
