added something on the students page

--- a/app/views/static_pages/information_for_students.html.erb
+++ b/app/views/static_pages/information_for_students.html.erb
@@ -1,1 +1,6 @@
-rush us!
+<h1>Check out some of facts about us Nationaly and Localy!</h1>
+
+<h2><%= link_to "Nation History", national_history_path, class: "nav-item", :style=>'color:#FFF;' %></h2>
+<h2><%= link_to "National Fast Facts", national_fast_facts_path, class: "nav-item", :style=>'color:#FFF;' %></h2>
+<h2><%= link_to "Local History", local_history_path, class: "nav-item", :style=>'color:#FFF;' %></h2>
+<h2><%= link_to "Local Fast Facts", local_fast_facts_path, class: "nav-item", :style=>'color:#FFF;' %></h2>
