--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -45,7 +45,7 @@
       <label for="item3">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/b9UMSnB.jpg">
+            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/62942_1619728219040_1715437_n.jpg?oh=923ebb0efcd4cac7df0542b9411fab2d&oe=5484C600&__gda__=1418750015_a0f9fdb99366cde2a083436b6e23da59">
             <h2>Second VP:</h2>
             <h3>Paul Bianco</h3>
           </span>
@@ -65,7 +65,7 @@
       <label for="item4">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
+            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/b9UMSnB.jpg">
             <h2>Treasure:</h2>
             <h3>Peter Webster</h3>
           </span>
