--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -66,7 +66,7 @@
         <span class="wrapper">
           <span class="front">
             <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/b9UMSnB.jpg">
-            <h2>Treasure:</h2>
+            <h2>Treasurer:</h2>
             <h3>Peter Webster</h3>
           </span>
           <span class="back">
@@ -106,7 +106,7 @@
         <span class="wrapper">
           <span class="front">
             <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
-            <h2>Sargent:</h2>
+            <h2>Sergeant:</h2>
             <h3>Hayden Burger</h3>
           </span>
           <span class="back">
@@ -116,6 +116,46 @@
             <h3>Mechanical Engineering</h3>
             <h2>Home Town:</h2>
             <h3>Mayflower, AK</h3>
+          </span>
+        </span>
+      </label>
+    </li>
+    <li>
+      <input type="checkbox" id="item7">
+      <label for="item7">
+        <span class="wrapper">
+          <span class="front">
+            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="https://scontent-b-lga.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10368270_1479343462318527_673464098958312708_n.jpg?oh=9bfd802f428db8a26469fac28ef3c1ac&oe=5493F37B">
+            <h2>Writer:</h2>
+            <h3>Mark Eddy</h3>
+          </span>
+          <span class="back">
+            <h2>Email:</h2>
+            <h3>heb3544@rit.edu</h3>
+            <h2>Major:</h2>
+            <h3>Chemical Engineering</h3>
+            <h2>Home Town:</h2>
+            <h3>Mayflower, MA</h3>
+          </span>
+        </span>
+      </label>
+    </li>
+    <li>
+      <input type="checkbox" id="item8">
+      <label for="item8">
+        <span class="wrapper">
+          <span class="front">
+            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Tb6p04z.jpg">
+            <h2>Web Dev:</h2>
+            <h3>Paul Darragh</h3>
+          </span>
+          <span class="back">
+            <h2>Email:</h2>
+            <h3>pmd6624@rit.edu</h3>
+            <h2>Major:</h2>
+            <h3>Software Engineering</h3>
+            <h2>Home Town:</h2>
+            <h3>North Attleboro, MA</h3>
           </span>
         </span>
       </label>
