--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,7 @@
-<script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-54820613-1', 'auto');
-    ga('send', 'pageview');
-
-</script>
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Phitau</title>
+  <title>Phi Tau Gamma Nu</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -19,6 +9,7 @@
 
 
 <%= render 'layouts/header' %>
+
 <% if notice %>
     <p class="alert alert-success"><%= notice %></p>
 <% end %>
