--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,16 +8,21 @@
       <p style="margin-top: -15px; font-size: 1.7rem; color: #FFF ">Learning Leading Serving</p>
     </div>
     <ul class="nav-links">
-      <li><%= link_to "Home", root_path, class: "nav-item" %></li>
-      <li><%= link_to "About", about_path, class: "nav-item" %></li>
-      <li><%= link_to "Students", information_for_students_path, class: "nav-item" %></li>
-      <li><%= link_to "Parents", information_for_parents_path, class: "nav-item" %></li>
-      <li><%= link_to "FAQ", faq_path, class: "nav-item" %></li>
-      <li><%= link_to "Contact", contact_us_path, class: "nav-item" %></li>
-      <% if user_signed_in?%>
-        <li><%= link_to "Sign-out", destroy_user_session_path, :method => :delete, class: "nav-item" %></li>
+      <% if current_user.role == nil %>
+        <li><%= link_to "Home", root_path, class: "nav-item" %></li>
+        <li><%= link_to "About", about_path, class: "nav-item" %></li>
+        <li><%= link_to "Students", information_for_students_path, class: "nav-item" %></li>
+        <li><%= link_to "Parents", information_for_parents_path, class: "nav-item" %></li>
+        <li><%= link_to "FAQ", faq_path, class: "nav-item" %></li>
+        <li><%= link_to "Contact", contact_us_path, class: "nav-item" %></li>
       <% else %>
-        <li><a class="nav-item" href="#openModal">Sign-In</a></li>
+        <li><%= link_to "Home", root_path, class: "nav-item" %></li>
+        <li><%= link_to "Posts", posts_path, class: "nav-item" %></li>
+    <% end %>
+      <% if user_signed_in?%>
+          <li><%= link_to "Sign-out", destroy_user_session_path, :method => :delete, class: "nav-item" %></li>
+      <% else %>
+          <li><a class="nav-item" href="#openModal">Sign-In</a></li>
       <% end %>
     </ul>
   </div>
