--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,7 @@
 <% @posts.reverse_each do |post| %>
+  <% if user_signed_in?%>
+
+  <% end %>
   <div class="card">
     <h1 style="text-align:center; text-decoration: underline;"><%= post.title %></h1>
       <div style="float: left; width: 40%">
