added link to edit pages, still need to make edit pages work

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div style="float: none; clear:both;"> </div>
   <div style="float: right;">
-    <%= link_to "Edit Info", root_path %>
+    <%= link_to "Edit Info", edit_user_path(@user) %>
   </div>
   <br>
 </div>
