--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,17 @@
+<h1> Edit Your Page!</h1>
 <div class="card">
-  <h1 style="text-align:center; text-decoration: underline;"><%= post.title %></h1>
-  <div style="float: left; width: 40%">
-    <%= image_tag post.image_url if post.image? %>
+  <h1 style="text-align:center; text-decoration: underline;">Your Info</h1>
+  <div style="float: left; width: 50%">
+    <%= image_tag @user.profile_picture if @user.profile_picture? %>
   </div>
-  <div style="float: right; width: 60%; padding-left: 20px;">
-    <p><%= post.content.html_safe %></p>
+  <div style="float: right; width: 50%; padding-left: 20px;">
+    <p>Name: <%= @user.first_name + " " + @user.last_name %></p>
+    <p>Email: <%= @user.email %></p>
+    <p>Website Status: <%= @user.role.slice(0,1).capitalize + @user.role.slice(1..-1) %></p>
   </div>
   <div style="float: none; clear:both;"> </div>
-  <hr>
+  <div style="float: right;">
+    <%= link_to "Edit Info", edit_user_path %>
+  </div>
+  <br>
 </div>
