--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,17 +1,17 @@
-<h1> Edit Your Page!</h1>
 <div class="card">
   <h1 style="text-align:center; text-decoration: underline;">Your Info</h1>
-  <div style="float: left; width: 50%">
-    <%= image_tag @user.profile_picture if @user.profile_picture? %>
-  </div>
+    <div style="float: left; width: 50%">
+      <%= image_tag @user.profile_picture if @user.profile_picture? %>
+      <div class="field">
+      </div>
+    </div>
   <div style="float: right; width: 50%; padding-left: 20px;">
-    <p>Name: <%= @user.first_name + " " + @user.last_name %></p>
-    <p>Email: <%= @user.email %></p>
-    <p>Website Status: <%= @user.role.slice(0,1).capitalize + @user.role.slice(1..-1) %></p>
+    <%= form_for current_user, url: {action: "update"} do |f| %>
+        <%= f.text_field :first_name, :placeholder => "First Name" %>
+        <%= f.text_field :last_name, :placeholder => "Last Name" %>
+        <%= f.text_field :email, :placeholder => "email" %>
+    <%= f.submit "Request to be a member" %>
+    <% end %>
   </div>
   <div style="float: none; clear:both;"> </div>
-  <div style="float: right;">
-    <%= link_to "Edit Info", edit_user_path %>
-  </div>
-  <br>
 </div>
