fixed accounts page

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,7 +10,7 @@
         <%= f.text_field :first_name, :placeholder => "First Name" %>
         <%= f.text_field :last_name, :placeholder => "Last Name" %>
         <%= f.text_field :email, :placeholder => "email" %>
-    <%= f.submit "Request to be a member" %>
+    <%= f.submit "Update Information" %>
     <% end %>
   </div>
   <div style="float: none; clear:both;"> </div>
