--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,9 +4,9 @@
     <%= image_tag @user.profile_picture if @user.profile_picture? %>
   </div>
   <div style="float: right; width: 50%; padding-left: 20px;">
-    <p>Name: <%= @user.first_name + " " + @user.last_name %></p>
+    <p>Name: <%= @user.first_name if @user.first_name? %> <%= " " + @user.last_name if @user.last_name? %></p>
     <p>Email: <%= @user.email %></p>
-    <p>Website Status: <%= @user.role.slice(0,1).capitalize + @user.role.slice(1..-1) %></p>
+    <p>Website Status: <%= @user.role.slice(0,1).capitalize if @user.role? %><%= @user.role.slice(1..-1) if @user.role? %></p>
   </div>
   <div style="float: none; clear:both;"> </div>
   <div style="float: right;">
