should be able to update user profile pictures now / fixed secruity vulernability

--- a/app/views/static_pages/admin.html.erb
+++ b/app/views/static_pages/admin.html.erb
@@ -16,7 +16,7 @@
                     <%= f.submit "Accept" %>
                     <% end %></td>
           <td><%= form_for user do |f| %>
-                    <%= f.hidden_field :role, :value => "not_a_member" %>
+                    <%= f.hidden_field :role, :value => "no" %>
                     <%= f.submit "Deny" %>
             <% end %></td>
         </tr>
