--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= f.label :content %><br>
-    <%= f.text_area :content %>
+    <%= f.text_area :content, class: "tinymce"  %>
   </div>
 
   <div class="field">
@@ -37,3 +37,5 @@
     <%= f.submit %>
   </div>
 <% end %>
+
+<%= tinymce :plugins => ["wordcount", "paste"] %>
