--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,7 +38,7 @@
       <div style="padding: 20px 10px 0px 10px"><%= f.text_field :email, :placeholder => "email", :tabindex => 1 %></div>
       <div style="padding: 20px 10px 0px 10px"><%= f.password_field :password, :placeholder => "Password", :tabindex => 2%></div>
       <div style="float: left; padding: 20px 0px 0px 10px"><%= f.submit 'Sign in', :tabindex => 3 %></div>
-      <div style="float: left; padding: 23px 50px 0px 15px; font-size: 20px" ><%= link_to "Sign up", new_user_registration_path, "data-no-turbolink" => true, class: "btn btn-primary btn-med" %></div>
+      <div style="float: left; padding: 23px 50px 0px 15px; font-size: 20px" ><%= link_to "Sign up", new_user_registration_path, "data-no-turbolink" => true %></div>
       <div style="float: none; clear:both;"> </div>
     <% end %>
   </div>
