contact info updated

--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -115,7 +115,7 @@
             <h2>Major:</h2>
             <h3>Mechanical Engineering</h3>
             <h2>Home Town:</h2>
-            <h3>Mayflower, AK</h3>
+            <h3>Mayflower, AR</h3>
           </span>
         </span>
       </label>
@@ -131,11 +131,11 @@
           </span>
           <span class="back">
             <h2>Email:</h2>
-            <h3>heb3544@rit.edu</h3>
+            <h3>mxe6552@rit.edu</h3>
             <h2>Major:</h2>
             <h3>Chemical Engineering</h3>
             <h2>Home Town:</h2>
-            <h3>Mayflower, MA</h3>
+            <h3>Pittsfield, MA</h3>
           </span>
         </span>
       </label>
