--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,32 @@
-<h2>Sign up</h2>
+<h2 style="">Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
+  <div style="float: left; margin-left: 25%"><%= f.label :email %><br />
   <%= f.email_field :email, autofocus: true %></div>
 
-  <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
+  <div style="float: right; margin-right: 20%"><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
     <%= f.password_field :password, autocomplete: "off" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
+  <div style="float: right; margin-right: 2%"><%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
-    <br>
-    <%= recaptcha_tags %>
-    <br>
-  <div><%= f.submit "Sign up" %></div>
+    <div style="float: none; clear:both;"> </div>
+  <div style="float: left; margin-left: 25%"><%= f.label :first_name %><br />
+    <%= f.text_field :first_name, autocomplete: "off" %></div>
+
+  <div style="float: right; margin-right: 20%"><%= f.label :last_name %><br />
+    <%= f.text_field :last_name, autocomplete: "off" %></div>
+  <div style="float: right; margin-right: 2%"><%= f.label :pledge_class %><br />
+    <%= f.text_field :pledge_class, autocomplete: "off" %></div>
+
+    <div style="float: none; clear:both;"> </div>
+
+  <br>
+    <div style="width: 19%; margin: 0 auto;"><%= recaptcha_tags %></div>
+  <br>
+
+  <div style="margin: 0 auto; width: 20em;"><%= f.submit "Sign up" %></div>
 <% end %>
 
-<%= render "devise/shared/links" %>
