--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,17 @@
 <div class="card" style="width: 50%">
   <h1 style="text-align:center; text-decoration: underline;">Your Info</h1>
-  <div style="float: left; heigh: auto;%">
+  <div style="float: left; heigh: auto; width: 50%">
     <%= image_tag @user.profile_picture_url if @user.profile_picture? %>
   </div>
-  <div style="float: right; width: 63%; padding-left: 20px;">
+  <div style="float: right; width: 50%; padding-left: 20px;">
     <p>Name: <%= @user.first_name if @user.first_name? %> <%= " " + @user.last_name if @user.last_name? %></p>
     <p>Email: <%= @user.email %></p>
     <p>Website Status: <%= @user.role.slice(0,1).capitalize if @user.role? %><%= @user.role.slice(1..-1) if @user.role? %></p>
+    <p>Phone Number: <%= @user.phone_number if @user.phone_number?%></p>
+    <p>Home Town: <%= @user.home_town if @user.home_town?%><%= " " + @user.state if @user.state?%></p>
+    <p>Pledge Class: <%= @user.pledge_class if @user.pledge_class?%></p>
+    <p>Major: <%= @user.major if @user.major?%></p>
+    <p>Big Brother: <%= @user.big_brother if @user.big_brother?%></p>
   </div>
   <div style="float: none; clear:both;"> </div>
   <div style="float: right;">
