--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,19 +6,19 @@
   <div style="float: left; margin-left: 25%"><%= f.label :email %><br />
   <%= f.email_field :email, autofocus: true %></div>
 
-  <div style="float: right; margin-right: 20%"><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
+  <div style="float: left; margin-left: 2%"><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
     <%= f.password_field :password, autocomplete: "off" %></div>
 
-  <div style="float: right; margin-right: 2%"><%= f.label :password_confirmation %><br />
+  <div style="float: right; margin-right: 22%"><%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
     <div style="float: none; clear:both;"> </div>
   <div style="float: left; margin-left: 25%"><%= f.label :first_name %><br />
     <%= f.text_field :first_name, autocomplete: "off" %></div>
 
-  <div style="float: right; margin-right: 20%"><%= f.label :last_name %><br />
+  <div style="float: left; margin-left: 2%"><%= f.label :last_name %><br />
     <%= f.text_field :last_name, autocomplete: "off" %></div>
-  <div style="float: right; margin-right: 2%"><%= f.label :pledge_class %><br />
+  <div style="float: right; margin-right: 22%"><%= f.label :pledge_class %><br />
     <%= f.text_field :pledge_class, autocomplete: "off" %></div>
 
     <div style="float: none; clear:both;"> </div>
