--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
       <% else %>
         <li><%= link_to "Home", root_path, class: "nav-item" %></li>
         <% if current_user.role == "writer" or current_user.role == "admin" %>
-          <li><%= link_to "Posts", posts_path, "data-no-turbolink" => true, class: "nav-item" %></li>
+          <li><%= link_to "Posts", posts_path, class: "nav-item" %></li>
         <% end %>
         <li><%=  link_to "Account", current_user, class: "nav-item"  %></li>
     <% end %>
