basic position table made

--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -1,4 +1,6 @@
 <body>
+<h2 style="text-align: center;">Executive Board</h2>
+<hr>
   <ul class="flipping-cards">
     <li>
       <input type="checkbox" id="item1">
@@ -120,9 +122,15 @@
         </span>
       </label>
     </li>
-    <li>
-      <input type="checkbox" id="item7">
-      <label for="item7">
+  </ul>
+  <div style="float: none; clear:both;"> </div>
+
+<h2 style="text-align: center;">Chairs</h2>
+<hr>
+<ul class="flipping-cards">
+<li>
+  <input type="checkbox" id="item7">
+  <label for="item7">
         <span class="wrapper">
           <span class="front">
             <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="https://scontent-b-lga.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10368270_1479343462318527_673464098958312708_n.jpg?oh=9bfd802f428db8a26469fac28ef3c1ac&oe=5493F37B">
@@ -138,11 +146,11 @@
             <h3>Pittsfield, MA</h3>
           </span>
         </span>
-      </label>
-    </li>
-    <li>
-      <input type="checkbox" id="item8">
-      <label for="item8">
+  </label>
+</li>
+<li>
+  <input type="checkbox" id="item8">
+  <label for="item8">
         <span class="wrapper">
           <span class="front">
             <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Tb6p04z.jpg">
@@ -158,9 +166,12 @@
             <h3>North Attleboro, MA</h3>
           </span>
         </span>
-      </label>
-    </li>
-  </ul>
-  <div style="float: none; clear:both;"> </div>
+  </label>
+</li>
+</ul>
+<div style="float: none; clear:both;"> </div>
+
+<h2 style="text-align: center;">Composite</h2>
+<hr>
 </body>
     
