--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -7,17 +7,15 @@
       <label for="item1">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/DMKgTjL.jpg">
-            <h2>President:</h2>
-            <h3> Madison Doolittle</h3>
+            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/DMKgTjL.jpg">
           </span>
-          <span class="back">
-            <h2>Email:</h2>
+          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
+            <h2>President</h2>
+            <h3>Madison Doolittle</h3>
+            <h2>Email</h2>
             <h3>mld5448@rit.edu</h3>
-            <h2>Major:</h2>
+            <h2>Major</h2>
             <h3>Biomedical Sciences</h3>
-            <h2>Home Town:</h2>
-            <h3>Pittsford, NY</h3>
           </span>
         </span>
       </label>
@@ -27,17 +25,15 @@
       <label for="item2">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/fsUNgMW.jpg">
-            <h2>First VP:</h2>
-            <h3>Kent Derbyshire</h3>
+            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/fsUNgMW.jpg">
           </span>
-          <span class="back">
-            <h2>Email:</h2>
+          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
+            <h2>First VP</h2>
+            <h3>Kent Derbyshire</h3>
+            <h2>Email</h2>
             <h3>kld4491@rit.edu</h3>
-            <h2>Major:</h2>
+            <h2>Major</h2>
             <h3>Mechanical Engineering</h3>
-            <h2>Home Town:</h2>
-            <h3>Watertown, NY</h3>
           </span>
         </span>
       </label>
@@ -47,17 +43,15 @@
       <label for="item3">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/62942_1619728219040_1715437_n.jpg?oh=923ebb0efcd4cac7df0542b9411fab2d&oe=5484C600&__gda__=1418750015_a0f9fdb99366cde2a083436b6e23da59">
-            <h2>Second VP:</h2>
-            <h3>Paul Bianco</h3>
+            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/62942_1619728219040_1715437_n.jpg?oh=923ebb0efcd4cac7df0542b9411fab2d&oe=5484C600&__gda__=1418750015_a0f9fdb99366cde2a083436b6e23da59">
           </span>
-          <span class="back">
-            <h2>Email:</h2>
+          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
+            <h2>Second VP</h2>
+            <h3>Paul Bianco</h3>
+            <h2>Email</h2>
             <h3>pxb9965@g.rit.edu</h3>
-            <h2>Major:</h2>
+            <h2>Major</h2>
             <h3>Biomedical Sciences</h3>
-            <h2>Home Town:</h2>
-            <h3>Pittsford, NY</h3>
           </span>
         </span>
       </label>
@@ -67,17 +61,15 @@
       <label for="item4">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/b9UMSnB.jpg">
-            <h2>Treasurer:</h2>
-            <h3>Peter Webster</h3>
+            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/b9UMSnB.jpg">
           </span>
-          <span class="back">
-            <h2>Email:</h2>
+          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
+            <h2>Treasurer</h2>
+            <h3>Peter Webster</h3>
+            <h2>Email</h2>
             <h3>pcw3752@rit.edu</h3>
-            <h2>Major:</h2>
+            <h2>Major</h2>
             <h3>Mechanical Engineering</h3>
-            <h2>Home Town:</h2>
-            <h3>Cazenovia, NY</h3>
           </span>
         </span>
       </label>
@@ -87,17 +79,15 @@
       <label for="item5">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Xzx4dci.jpg">
-            <h2>Chaplain:</h2>
-            <h3>Kyle Grant</h3>
+            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Xzx4dci.jpg">
           </span>
-          <span class="back">
-            <h2>Email:</h2>
+          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
+            <h2>Chaplain</h2>
+            <h3>Kyle Grant</h3>
+            <h2>Email</h2>
             <h3>kpg1737@rit.edu</h3>
-            <h2>Major:</h2>
+            <h2>Major</h2>
             <h3>Marketing</h3>
-            <h2>Home Town:</h2>
-            <h3>Croton-on-Hudson, NY</h3>
           </span>
         </span>
       </label>
@@ -107,17 +97,15 @@
       <label for="item6">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
-            <h2>Sergeant:</h2>
-            <h3>Hayden Burger</h3>
+            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
           </span>
-          <span class="back">
-            <h2>Email:</h2>
+          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
+            <h2>Sergeant</h2>
+            <h3>Hayden Burger</h3>
+            <h2>Email</h2>
             <h3>heb3544@rit.edu</h3>
-            <h2>Major:</h2>
+            <h2>Major</h2>
             <h3>Mechanical Engineering</h3>
-            <h2>Home Town:</h2>
-            <h3>Mayflower, AR</h3>
           </span>
         </span>
       </label>
@@ -133,17 +121,15 @@
   <label for="item7">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="https://scontent-b-lga.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10368270_1479343462318527_673464098958312708_n.jpg?oh=9bfd802f428db8a26469fac28ef3c1ac&oe=5493F37B">
-            <h2>Writer:</h2>
-            <h3>Mark Eddy</h3>
+            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="https://scontent-b-lga.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10368270_1479343462318527_673464098958312708_n.jpg?oh=9bfd802f428db8a26469fac28ef3c1ac&oe=5493F37B">
           </span>
-          <span class="back">
-            <h2>Email:</h2>
+          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
+            <h2>Writer</h2>
+            <h3>Mark Eddy</h3>
+            <h2>Email</h2>
             <h3>mxe6552@rit.edu</h3>
-            <h2>Major:</h2>
+            <h2>Major</h2>
             <h3>Chemical Engineering</h3>
-            <h2>Home Town:</h2>
-            <h3>Pittsfield, MA</h3>
           </span>
         </span>
   </label>
@@ -153,17 +139,15 @@
   <label for="item8">
         <span class="wrapper">
           <span class="front">
-            <img style="width: auto; height: 170px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Tb6p04z.jpg">
-            <h2>Web Dev:</h2>
-            <h3>Paul Darragh</h3>
+            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Tb6p04z.jpg">
           </span>
-          <span class="back">
-            <h2>Email:</h2>
+          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
+            <h2>Web Dev</h2>
+            <h3>Paul Darragh</h3>
+            <h2>Email</h2>
             <h3>pmd6624@rit.edu</h3>
-            <h2>Major:</h2>
+            <h2>Major</h2>
             <h3>Software Engineering</h3>
-            <h2>Home Town:</h2>
-            <h3>North Attleboro, MA</h3>
           </span>
         </span>
   </label>
